Fix bug in which dark mode switches to original red color. Changed title on About page.

--- a/styles.css
+++ b/styles.css
@@ -610,6 +610,11 @@ div.hexPreview{
     padding: 6px;
 }
 
+.underline{
+    color: #003807;
+    text-decoration: underline;
+}
+
 /* media queries */
 /* tablets and phones */
 @media (max-width: 870px) {
